--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fourthmilestone",
   "version": "1.0.0",
   "description": "setup for start of fourth milestone - API with Node and Angular",
-  "main": "server.js",
+  "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/lathammatt/fourthmilestone#readme",
   "dependencies": {
     "express": "^4.14.0"
+  },
+  "devDependencies": {
+    "bower": "^1.7.9"
   }
 }
