moved messages to mongodb, added mongoose

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/lathammatt/fourthmilestone#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mongoose": "^4.6.1"
   },
   "devDependencies": {
     "bower": "^1.7.9"
